freebsd-utils (10.0+ds1-1) UNRELEASED; urgency=low

  [ Mats Erik Andersson ]
  * Fetch pf.conf(5) and pf.os(5) from new location.

 -- Robert Millan <rmh@debian.org>  Sat, 22 Mar 2014 23:09:57 +0100

freebsd-utils (10.0-3) experimental; urgency=low

  * Add 'sysctl -p' support. Replace /sbin/sysctl wrapper script with
    actual binary.
  * Add /usr/{bin,sbin} to devd PATH (needed for /usr/bin/logger).
  * Disable parallel builds until switch to bmake (for some reason
    DPSRCS in kdump is ignored by fmake).

 -- Robert Millan <rmh@debian.org>  Mon, 17 Feb 2014 16:47:54 +0100

freebsd-utils (10.0-2) experimental; urgency=low

  * Handle USB keyboard attach/detach events.
  * Remove Build-Conflicts on libc0.1-dev-i386 (not needed anymore since
    kdump is now using headers from kfreebsd-headers-10.0-1).
  * Remove kludge that allowed auto-detected macros to be missing when
    building kdump. (Closes: #736202)
  * Consistently use the new SIOCAIFADDR ABI in ifconfig. (Closes: #736238)

 -- Robert Millan <rmh@debian.org>  Mon, 03 Feb 2014 23:25:03 +0100

freebsd-utils (10.0-1) experimental; urgency=low

  * New upstream release.
    - Refresh all patches.
    - Remove atacontrol(8).

  [ Robert Millan ]
  * Add /etc/sysctl.conf. It used to be provided by procps, but now it
    isn't. Its content is kernel-specific anyway, so let's just use the
    FreeBSD version.
  * Correctly setup BSD version of MAKEFLAGS to support parallel builds.

 -- Robert Millan <rmh@debian.org>  Tue, 21 Jan 2014 00:24:13 +0100

freebsd-utils (9.2+ds1-1) unstable; urgency=low

  * Drop freebsd-geom transitional package.
  * Fetch source code securely (https) in get-orig-source.
  * Split udeb build from normal build, using a separate objdir by means
    of MAKEOBJDIRPREFIX. This allows us to:
    - Optimize udeb build for size (-Os).
    - Build udeb with -DWITHOUT_IPX_SUPPORT (for ifconfig).
    - Restrict -DWITHOUT_JAIL only to udeb build. This effectively brings