@@ -12,7 +12,7 @@ Build-Depends: debhelper (>= 7), po-debconf, sharutils,
  kfreebsd-kernel-headers (>= 10.0~4),
 # for kdump
  kfreebsd-headers-10.0-1,
- libc0.1-dev (>= 2.13-26),
+ libc0.1-dev (>= 2.18-2~),
  libbsd-dev (>= 0.3.0),
 # zlib1g-dev: savecore
  zlib1g-dev,
