@@ -3,6 +3,10 @@ freebsd-utils (10.0+ds1-1) UNRELEASED; urgency=low
   [ Mats Erik Andersson ]
   * Fetch pf.conf(5) and pf.os(5) from new location.
 
+  [ Robert Millan ]
+  * Remove local ifmediareq kludge. B-D on libc0.1-dev >= 2.18-2
+    instead.
+
  -- Robert Millan <rmh@debian.org>  Sat, 22 Mar 2014 23:09:57 +0100
 
 freebsd-utils (10.0-3) experimental; urgency=low
